--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,5 +7,25 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  body
+  body style="padding-top:4.5rem;"
+    nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
+      a.navbar-brand href="/"
+        = "RailsBB#revenge"
+      .collapse.navbar-collapse.justify-content-start
+        ul.navbar-nav
+          li.nav-item.active
+            a.nav-link href="/"
+              = "テスト1"
+          li.nav-item.active
+            a.nav-link href="/"
+              = "テスト2"
+      .collapse.navbar-collapse.justify-content-end
+        ul.navbar-nav
+          li.nav-item
+            - if current_user.present?
+              a.nav-link href="/"
+                = current_user.name
+            - else
+              a.nav-link href="/login"
+                = "Login"
     = yield
