できてそう

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,11 +14,11 @@ html
       .collapse.navbar-collapse.justify-content-start
         ul.navbar-nav
           li.nav-item.active
-            a.nav-link href="/"
-              = "テスト1"
+            a.nav-link href="/topics"
+              = "トピック一覧"
           li.nav-item.active
             a.nav-link href="/"
-              = "テスト2"
+              = "画像一覧"
       .collapse.navbar-collapse.justify-content-end
         ul.navbar-nav
           li.nav-item
