エラーメッセージが複数でるように

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,8 +30,9 @@ html
                 = "Login"
     .container
       - if flash.notice.present?
-        p.notice.alert.alert-success= notice
+        - flash.notice.each do |s|
+          p.notice.alert.alert-success= s
       - if flash.alert.present?
-        p.alert.alert-danger= alert
-      
+        - flash.alert.each do |s|
+          p.alert.alert-danger= s
       = yield
