新規スレッド画面を整理

--- a/app/views/topics/new.html.slim
+++ b/app/views/topics/new.html.slim
@@ -1,10 +1,15 @@
-= form_with url: topics_path, model: @topic, local:true do |f|
-  .form-group
-    = f.label "タイトル"
-    = f.text_field :title, class: 'form-control'
-    = f.label "本文"
-    = f.text_area :message, rows: 7, class: 'form-control'
-    = f.hidden_field :image
-    = f.file_field :image, class: 'form-control-file'
-  = f.submit "スレ立て", class: 'btn btn-primary'
-= link_to "スレッド一覧に戻る", topics_path, class: 'btn btn-primary'
+.my-3.p-3.bg-white.rounded.shadow-sm
+  h2
+    = "新規書き込み"
+  = form_with url: topics_path, model: @topic, local:true do |f|
+    .form-group
+      = f.label "タイトル"
+      = f.text_field :title, class: 'form-control'
+    .form-group
+      = f.label "本文"
+      = f.text_area :message, rows: 7, class: 'form-control'
+    .form-group
+      = f.hidden_field :image
+      = f.file_field :image, class: 'form-control-file p-3'
+    = f.submit "スレ立て", class: 'btn btn-primary'
+  = link_to "スレッド一覧に戻る", topics_path, class: 'btn btn-primary'
