--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
             a.nav-link href="/topics"
               = "トピック一覧"
           li.nav-item.active
-            a.nav-link href="/"
+            a.nav-link href="/image_list"
               = "画像一覧"
       .collapse.navbar-collapse.justify-content-end
         ul.navbar-nav
