バグしょうもない方法で修正

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -20,20 +20,16 @@
       / .border-bottomのありなしだけ
       - if index < @posts.length - 1
         .media-body.my-1.p-1.border-bottom
-          h5= (index + 1).to_s + ' ' + post.user.name
+          h5= (index + (@page.to_i - 1 ) * 25 + 1).to_s + ' ' + post.user.name
           .ml-3
             = simple_format(h(post.message), {}, sanitize: false, wrapper_tag: "div")
-          / .img-fluid.mt-3.mb-3
-          /   = image_tag post.image, class: 'img-fluid' if post.image.attached?
           .small.text-muted.float-right.mt-n2
             = I18n.l(post.created_at)
       - else
         .media-body.my-1.p-1
-          h5= (index + 1).to_s + ' ' + post.user.name
+          h5= (index + (@page.to_i - 1 ) * 25 + 1).to_s + ' ' + post.user.name
           .ml-3
             = simple_format(h(post.message), {}, sanitize: false, wrapper_tag: "div")
-          / .img-fluid.mt-3.mb-3
-          /   = image_tag post.image, class: 'img-fluid' if post.image.attached?
           .small.text-muted.float-right.mt-n2
             = I18n.l(post.created_at)
   .mb-3
